--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,6 @@
 .header {
+  position: sticky;
+  top: 0;
   box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.25), inset 0 -3px 2px 0 rgba(0, 0, 0, 0.1);
   background: linear-gradient(276deg, #2e1746 3.19%, #2e225f 100%);
   padding-block: 12px;
