--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -22,6 +22,8 @@
   width: 38px;
   height: 38px;
   background-color: #ffffff66;
+  transition: all 200ms ease;
+
   @media (min-width: 768px) {
     width: 18px;
     height: 18px;
