--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -1,36 +1,58 @@
-.registerPage {
+.section {
+  padding-block: 24px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  background-image: url('../../assets/login/mobile@1x.png');
   min-height: 100vh;
-  width: 100%;
-  background-color: var(--background-color);
-  box-sizing: border-box;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    background-image: url('../../assets/login/mobile@2x.png');
+  }
+
+  @media (min-width: 768px) {
+    background-image: url('../../assets/register/tablet@1x.png');
+
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 2dppx),
+      (min-resolution: 192dpi) {
+      background-image: url('../../assets/register/tablet@2x.png');
+    }
+  }
+
+  @media (min-width: 1280px) {
+    background-image: url('../../assets/register/desktop@1x.png');
+
+    @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 2dppx),
+      (min-resolution: 192dpi) {
+      background-image: url('../../assets/register/desktop@2x.png');
+    }
+  }
 }
 
-@media (min-width: 768px) and (max-width: 1279px) {
-  .registerPage {
-    background-image: url('/src/images/register/tablet-register-1x.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.container {
+  @media (min-width: 768px) {
+    width: 533px;
+    background-color: #382d5c;
+    padding: 40px 62px;
+    border-radius: 8px;
+    backdrop-filter: blur(100px);
+    box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.25);
+    background: var(--form-color);
+    background-image: url('../../assets/register/bg-form@1x.png');
     background-position: center;
-  }
-}
-@media (min-width: 768px) and (max-width: 1279px) and (min-resolution: 2dppx) {
-  .registerPage {
-    background-image: url('/src/images/register/tablet-register-2x.jpg');
-  }
-}
-@media screen and (min-width: 1280px) {
-  .registerPage {
-    background-image: url('../../images/register/desctop-register-1x.jpg');
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: 700px;
   }
-}
-@media (min-width: 1280px) and (min-resolution: 2dppx) {
-  .registerPage {
-    background-image: url('../../images/register/desctop-register-2x.jpg');
+
+  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    background-image: url('../../assets/register/bg-form@2x.png');
   }
 }
