--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -50,7 +50,14 @@ button {
 
 input,
 select {
+  padding: 0;
   outline: none;
+  border: none;
+}
+
+input:-webkit-autofill {
+  transition: background-color 9999s ease-in-out 0s;
+  -webkit-text-fill-color: var(--white-600);
 }
 
 fieldset {
