--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,37 +1,62 @@
-.loginPage {
+.section {
+  padding-block: 24px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  box-sizing: border-box;
+  background-image: url('../../assets/login/mobile@1x.png');
   min-height: 100vh;
-  width: 100%;
-  background-color: var(--background-color);
-  box-sizing: border-box;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    background-image: url('../../assets/login/mobile@2x.png');
+  }
+
+  @media (min-width: 768px) {
+    background-image: url('../../assets/login/tablet@1x.png');
+
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 2dppx),
+      (min-resolution: 192dpi) {
+      background-image: url('../../assets/login/tablet@2x.png');
+    }
+  }
+
+  @media (min-width: 1280px) {
+    background-image: url('../../assets/login/desktop@1x.png');
+
+    @media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 2dppx),
+      (min-resolution: 192dpi) {
+      background-image: url('../../assets/login/desktop@2x.png');
+    }
+  }
 }
 
-@media (min-width: 768px) and (max-width: 1279px) {
-  .loginPage {
-    background-image: url('/src/images/login/login-tablet-1x.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
+.container {
+  @media (min-width: 768px) {
+    width: 533px;
+    background-color: #382d5c;
+    padding: 60px 62px;
+    border-radius: 8px;
+    backdrop-filter: blur(100px);
+    box-shadow: 0 4px 60px 0 rgba(0, 0, 0, 0.25);
+    background: var(--form-color);
+    background-image: url('../../assets/login/bg-form@1x.png');
     background-position: center;
-  }
-}
-@media (min-width: 768px) and (max-width: 1279px) and (min-resolution: 2dppx) {
-  .loginPage {
-    background-image: url('/src/images/login/login-tablet-2x.jpg');
-  }
-}
-@media screen and (min-width: 1280px) {
-  .loginPage {
-    background-image: url('../../images/login/desctop-1x-login.jpg');
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: 700px;
+
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 2dppx),
+      (min-resolution: 192dpi) {
+      background-image: url('../../assets/login/bg-form@2x.png');
+    }
   }
-}
-@media (min-width: 1280px) and (min-resolution: 2dppx) {
-  .loginPage {
-    background-image: url('../../images/login/desctop-2x-login.jpg');
+
+  @media (min-width: 1280px) {
+    padding-block: 82px;
   }
 }
