--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -6,7 +6,7 @@
   /* Color */
   --yellow: #ffb627;
   --violet-10: #734aef;
-  --violet-20: #211a3f;
+  --violet-20: #1b1533;
   --white: #fbfbfb;
   --white-400: rgba(255, 255, 255, 0.4);
   --white-600: rgba(255, 255, 255, 0.6);
