--- a/src/ui/LoadingBtn/LoadingBtn.module.css
+++ b/src/ui/LoadingBtn/LoadingBtn.module.css
@@ -14,6 +14,10 @@
   color: #fff;
   background: linear-gradient(167deg, #ffc727 0%, #9e40ba 61.46%, #7000ff 90.54%);
 
+  &:disabled {
+    cursor: progress;
+  }
+
   @media (min-width: 768px) {
     width: 300px;
   }
