--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -47,7 +47,7 @@
     background-image: url('../../assets/login/bg-form@1x.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 700px;
+    background-size: cover;
 
     @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
       (min-resolution: 2dppx),
