--- a/src/components/CurrencyTab/CurrencyTab.module.css
+++ b/src/components/CurrencyTab/CurrencyTab.module.css
@@ -1,1 +1,58 @@
- 
+.mainCurrencyDiv {
+  background-color: rgba(74, 86, 226, 0.1);
+}
+
+.tableHeading {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+table {
+  border-collapse: collapse !important;
+  table-layout: fixed !important;
+  width: 100% !important;
+}
+
+/* table header */
+th:nth-child(1) {
+  width: 130px;
+  padding-left: 20px;
+  padding-right: 26px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+th:nth-child(2) {
+  width: 130px;
+  padding: 0 64px 0 0;
+}
+
+th:nth-child(3) {
+  width: 54px;
+  padding: 0 20px 0 0;
+}
+
+/* table body */
+
+td:nth-child(1) {
+  width: 32px !important;
+  padding-top: 8px;
+  padding-left: 20px;
+  padding-bottom: 12px;
+}
+
+td:nth-child(2) {
+  padding-top: 8px;
+  padding-left: 20px;
+  padding-bottom: 12px;
+}
+
+td:nth-child(3) {
+  padding-top: 8px;
+  padding-bottom: 12px;
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 1280px) {
+}
