Change the background color to black and update the value of the --violet-20 variable to improve the visual design

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,7 +5,7 @@ html {
 body {
   font-family: var(--font-pr);
   color: var(--white);
-  background-color: var(--violet-20);
+  background-color: #000;
   line-height: 1.5;
 }
 
