--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -31,9 +31,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   gap: 20px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding-bottom: 10px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--white);
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: all 200ms ease;
+  }
+
+  &:focus-within::before {
+    transform: scaleX(1);
+  }
+
+  &:focus-within .icon {
+    fill: var(--white);
+  }
 
   input {
     background-color: transparent;
