feat: add a button to add transaction with appropriate style

--- a/src/ui/ButtonAddTransaction/ButtonAddTransaction.module.css
+++ b/src/ui/ButtonAddTransaction/ButtonAddTransaction.module.css
@@ -9,4 +9,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: 768px) {
+    bottom: 40px;
+    right: 40px;
+  }
 }
