add component balance & dashboard styles + fix Container wrappers in components TransactionsList, Navigation

--- a/src/components/TransactionsList/TransactionsList.module.css
+++ b/src/components/TransactionsList/TransactionsList.module.css
@@ -85,3 +85,28 @@ td {
   margin-left: 4px;
   color: var(--white-600);
 }
+
+.transactionsContainer {
+  @media screen and (min-width: 1280px) {
+    padding-top: 46px;
+  }
+}
+
+.scrollContainer {
+  padding-block: 12px;
+  padding-inline: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.noTransactionsContainer {
+  padding-block: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  text-align: center;
+  @media (min-width: 1280px) {
+    padding-top: 46px;
+  }
+}
