--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,6 +3,9 @@
   @media (min-width: 768px) {
     padding-top: 40px;
   }
+  @media (min-width: 1280px) {
+    padding-left: 16px;
+  }
 }
 
 .nav {
