--- a/src/pages/DashboardPage/DashboardPage.module.css
+++ b/src/pages/DashboardPage/DashboardPage.module.css
@@ -1,4 +1,5 @@
 .section {
+  position: relative;
   min-height: 100vh;
   background-image: url('../../assets/dashboard/mobile@1x.png');
   background-position: center;
@@ -29,4 +30,48 @@
       background-image: url('../../assets/dashboard/desktop@2x.png');
     }
   }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  @media (max-width: 767px) {
+    padding-inline: 0;
+  }
+  @media (min-width: 768px) {
+    gap: 20px;
+  }
+  @media (min-width: 1280px) {
+    flex-direction: row;
+    gap: 70px;
+    padding-left: 0;
+    justify-content: space-between;
+  }
+}
+.userBarContainer {
+  position: relative;
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
+  @media (min-width: 1280px) {
+    flex-direction: column;
+    justify-content: start;
+    gap: 32px;
+    border-right: 1px solid var(--white-600);
+  }
+}
+
+.navAndBalCont {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+}
+
+.loader {
+  position: fixed;
+  height: 100vh;
+  width: 100vh;
+  z-index: 999;
+  background-color: var(--white-600);
 }
