--- a/src/components/TransactionsItem/TransactionsItem.module.css
+++ b/src/components/TransactionsItem/TransactionsItem.module.css
@@ -15,22 +15,32 @@
 
 .delete-btn {
   color: #fff;
+  letter-spacing: 0;
   font-size: 14px;
+  font-weight: 400;
   padding: 4px 12px;
   border-radius: 18px;
   background: linear-gradient(167deg, #ffc727 0%, #9e40ba 61.46%, #7000ff 90.54%);
   height: 29px;
+  width: 69px;
+  text-transform: capitalize;
   box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
 }
 
-.edit-btn span {
-  margin-left: 4px;
-  color: var(--white-600);
+.edit-btn {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+
+  span {
+    color: var(--white-600);
+  }
 }
 
 .btns {
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
   gap: 8px;
 }
 
@@ -39,15 +49,16 @@
 }
 
 .length {
-  display: block;
-  text-align: end;
-  width: 120px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 120px;
+  text-align: end;
 
   @media (min-width: 768px) {
     text-align: start;
-    width: 100px;
+    max-width: 150px;
   }
 }
