--- a/src/pages/DashboardPage/DashboardPage.module.css
+++ b/src/pages/DashboardPage/DashboardPage.module.css
@@ -35,26 +35,31 @@
 .container {
   display: flex;
   flex-direction: column;
+
   @media (max-width: 767px) {
     padding-inline: 0;
   }
+
   @media (min-width: 768px) {
-    gap: 20px;
+    gap: 32px;
   }
+
   @media (min-width: 1280px) {
     flex-direction: row;
     gap: 70px;
     padding-left: 0;
-    justify-content: space-between;
   }
 }
 .userBarContainer {
-  position: relative;
   @media (min-width: 768px) {
     display: flex;
     justify-content: space-between;
   }
+
   @media (min-width: 1280px) {
+    position: sticky;
+    top: 80px;
+    max-height: 630px;
     flex-direction: column;
     justify-content: start;
     gap: 32px;
@@ -66,12 +71,4 @@
   display: flex;
   flex-direction: column;
   gap: 28px;
-}
-
-.loader {
-  position: fixed;
-  height: 100vh;
-  width: 100vh;
-  z-index: 999;
-  background-color: var(--white-600);
 }
