--- a/src/components/CurrencyTab/CurrencyTab.module.css
+++ b/src/components/CurrencyTab/CurrencyTab.module.css
@@ -1,139 +1,64 @@
-.mainCurrencyDiv {
+.container {
+  overflow: hidden;
   background-color: rgba(74, 86, 226, 0.1);
-  max-width: 480px;
+  width: 320px;
+  height: 214px;
+
+  @media (min-width: 768px) {
+    width: 336px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
+  @media (min-width: 1280px) {
+    width: 480px;
+    height: 380px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
 
   table {
     border-collapse: collapse !important;
     table-layout: fixed !important;
     width: 100% !important;
+    text-align: center;
   }
 
-  th:nth-child(1) {
-    width: 130px;
-    padding-left: 20px;
-    padding-right: 26px;
-    padding-top: 13px;
-    padding-bottom: 13px;
-  }
-
-  th:nth-child(2) {
-    width: 130px;
-    padding: 0 64px 0 0;
-  }
-
-  th:nth-child(3) {
-    width: 54px;
-    padding: 0 20px 0 0;
+  thead {
+    background-color: rgba(255, 255, 255, 0.2);
   }
 
   td {
     font-family: var(--font-sec);
   }
 
-  td:nth-child(1) {
-    width: 32px !important;
-    padding-top: 8px;
-    padding-left: 20px;
-    padding-bottom: 12px;
+  th {
+    padding-block: 12px;
   }
 
-  td:nth-child(2) {
-    padding-top: 8px;
-    padding-left: 20px;
-    padding-bottom: 12px;
-  }
-
-  td:nth-child(3) {
-    padding-top: 8px;
-    padding-bottom: 12px;
-  }
-
-  .chartDiv p {
-    display: none;
-  }
-
-  .canvas {
-    width: 100%;
-  }
-
-  @media screen and (min-width: 768px) {
-    .mainCurrencyDiv {
-      max-width: 336px;
-    }
-
-    th:nth-child(1) {
-      width: 130px;
-      padding-top: 12px;
-      padding-bottom: 12px;
-      padding-right: 34px;
-    }
-
-    th:nth-child(2) {
-      width: 151px;
-      padding: 0 74px 0 0;
-    }
-
-    th:nth-child(3) {
-      width: 55px;
-      padding: 0 20px 0 0;
-    }
-
-    .chartDiv img {
-      min-width: 336px;
-    }
-  }
-
-  @media screen and (min-width: 1280px) {
-    .chartDiv {
-      position: relative;
-    }
-    .chartDiv p {
-      display: block;
-      position: absolute;
-      font-size: 12px;
-      color: var(--dashboard-text);
-    }
-
-    .chartDiv .usdP {
-      top: 90px;
-      left: 105px;
-    }
-
-    .chartDiv .euroP {
-      top: -5px;
-      right: 105px;
-    }
-
-    .mainCurrencyDiv {
-      max-width: 480px;
-    }
-
-    th:nth-child(1) {
-      width: 187px;
-      padding-left: 62px;
-      padding-right: 49px;
-      padding-top: 16px;
-      padding-bottom: 16px;
-    }
-
-    th:nth-child(2) {
-      width: 127px;
-      padding: 0 50px 0 0;
-    }
-
-    th:nth-child(3) {
-      width: 166px;
-      padding: 0 131px 0 0;
-    }
-
-    td:nth-child(1) {
-      text-align: center;
-      padding-top: 8px;
-      padding-left: 20px;
-      padding-bottom: 12px;
-    }
+  td {
+    padding-block: 8px;
   }
 }
-.tableHeading {
-  background-color: rgba(255, 255, 255, 0.2);
+
+.chart {
+  @media (min-width: 1280px) {
+    position: relative;
+
+    .usd,
+    .euro {
+      color: #ff868d;
+      position: absolute;
+    }
+
+    .usd {
+      top: 100px;
+      left: 102px;
+    }
+
+    .euro {
+      top: 8px;
+      right: 102px;
+    }
+  }
 }
