--- a/src/components/StatisticsTab/StatisticsTab.module.css
+++ b/src/components/StatisticsTab/StatisticsTab.module.css
@@ -1,186 +1,21 @@
-.statisticsContainer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas: 
-    "title"
-    "chart"
-    "filters"
-    "table"
-    ;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 40px;
-}
-
 .title {
-    grid-area: title;
-    font-size: 30px;
-    font-weight: 400;
-    text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-    margin-bottom: 8px;
+  font-weight: 400;
+  font-size: 30px;
+  color: var(--white);
+  margin-bottom: 12px;
 }
 
-.chart {
-    grid-area: chart;
-    margin-bottom: 32px;
-    width: 100%;
+.container {
+  @media (min-width: 768px) {
+    display: flex;
+    gap: 32px;
+  }
+
+  @media (min-width: 1280px) {
+    padding-block: 32px;
+  }
 }
 
-.dashboardFilters {
-    grid-area: filters;
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.statisticsTable {
-    grid-area: table;
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    margin-bottom: 45px;
-}
-
-.tableHeader {
-    background-color: rgba(82, 59, 126, 0.6);
-}
-
-.tableHeader th {
-    font-size: 16px;
-    font-weight: 600;
-    
-    padding: 16px;
-}
-
-.leftCorner {
-    text-align: start;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
-
-.rightCorner {
-    text-align: end;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
-
-.tableItem{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    border-bottom: 1px solid rgba(82, 59, 126, 0.6);
-}
-
-.categoryColumn, 
-.sumColumn {
-    vertical-align: middle;
-}
-
-.categoryColumn {
-    width: 70%;
-    text-align: start;
-}
-
-.sumColumn {
-    width: 30%;
-    text-align: end;
-    padding-right: 16px;
-}
-
-.categoryMarker {
-    display: inline-block;
-    margin-right: 16px;
-    width: 24px;
-    height: 24px;
-    justify-self: center;
-    border-radius: 2px;
-}
-
-.transactionsType, 
-.totalExpense,
-.totalIncome {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 14px;
-}
-
-.totalExpense {
-    color: #ff868d;
-    text-align: end;
-    padding-right: 16px;
-}
-
-.totalIncome {
-    color: #ffb627;
-    text-align: end;
-    padding-right: 16px;
-}
-
-@media screen and (min-width: 768px) {
-    .statisticsContainer {
-        grid-template-columns: repeat(2, 336px);
-        grid-template-rows: repeat(2, auto);
-        grid-template-areas:
-            "title filters"
-            "chart table"
-        ;
-        gap: 20px 32px;
-        padding-left: 32px;
-        padding-right: 32px;
-        margin-top: 20px;
-    }
-
-    .title {
-        margin-bottom: 0;
-    }
-
-    .chart {
-        width: 336px !important;
-        height: 336px !important;
-    }
-
-    .dashboardFilters {
-        grid-template-rows: none;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 16px;
-        margin-bottom: 0;
-        align-items: end;
-    }
-
-    .statisticsTable {
-        margin-bottom: 13px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .statisticsContainer {
-        border-left: 1px solid rgba(255, 255, 255, 0.6);
-        grid-template-columns: 288px auto;
-        grid-template-rows: repeat(2, auto);
-        grid-template-areas:
-            "title title"
-            "chart filters"
-            "chart table"
-        ;
-        gap: 20px 32px;
-        padding-left: 69px;
-        padding-right: 16px;
-        margin-top: 32px;
-    }
-
-    .chart {
-        width: 288px !important;
-        height: 288px !important;
-    }
-
-    .dashboardFilters {
-        gap: 32px;
-        align-items: end;
-    }
-
-    .statisticsTable {
-        margin-bottom: 46px;
-    }
+.wrapTable {
+  width: 100%;
 }
