--- a/src/components/StatisticsTab/StatisticsTab.module.css
+++ b/src/components/StatisticsTab/StatisticsTab.module.css
@@ -23,3 +23,18 @@
     width: 395px;
   }
 }
+
+.skeleton {
+  width: 100%;
+  height: 360px;
+  margin-block: 20px;
+
+  @media (min-width: 768px) {
+    height: 450px;
+    margin-block: 40px;
+  }
+
+  @media (min-width: 1280px) {
+    height: 480px;
+  }
+}
