--- a/src/components/StatisticsChart/StatisticsChart.module.css
+++ b/src/components/StatisticsChart/StatisticsChart.module.css
@@ -2,6 +2,7 @@
   width: 280px;
   height: 280px;
   margin: 0 auto;
+  position: relative;
 
   @media (min-width: 768px) {
     width: 336px;
@@ -12,6 +13,38 @@
   @media (min-width: 1280px) {
     width: 288px;
     height: 288px;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    inset: 0;
+    border-radius: 100%;
+    box-shadow: inset 0 0 8px 0 #000;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 192px;
+    height: 192px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 100%;
+    box-shadow: 0 0 8px 0 #000;
+
+    @media (min-width: 768px) {
+      width: 231px;
+      height: 231px;
+    }
+
+    @media (min-width: 1280px) {
+      width: 198px;
+      height: 198px;
+    }
   }
 }
 
