Fixed the styles

--- a/src/components/StatisticsChart/StatisticsChart.module.css
+++ b/src/components/StatisticsChart/StatisticsChart.module.css
@@ -58,19 +58,28 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  mask-image: radial-gradient(circle 100px at center, transparent 99px, black 100px);
+  mask-image: radial-gradient(circle 97px at center, transparent 96px, black 97px);
   -webkit-mask-image: radial-gradient(
-    circle 100px at center,
-    transparent 99px,
-    black 100px
+    circle 97px at center,
+    transparent 96px,
+    black 97px
   );
 
-  @media (max-width: 1279px) and (min-width: 768px) {
-    mask-image: radial-gradient(circle 120px at center, transparent 119px, black 120px);
+  @media (min-width: 768px) {
+    mask-image: radial-gradient(circle 116px at center, transparent 115px, black 116px);
     -webkit-mask-image: radial-gradient(
-      circle 120px at center,
-      transparent 119px,
-      black 120px
+      circle 116px at center,
+      transparent 115px,
+      black 116px
+    );
+  }
+
+  @media (min-width: 1280px) {
+    mask-image: radial-gradient(circle 100px at center, transparent 99px, black 100px);
+    -webkit-mask-image: radial-gradient(
+      circle 100px at center,
+      transparent 99px,
+      black 100px
     );
   }
 }
@@ -82,4 +91,5 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: inset 0 0 4px 0 #000;
 }
